# RoBERTa-Verbs

./: CHECKSUM_VERIFICATION.md  FILTERSPACY_DELIVERY_SUMMARY.md  FILTERSPACY_EXTRACTOR_INTEGRATION.md  FILTERSPACY_FEATURES.md  FILTERSPACY_IMPLEMENTATION.md  FILTERSPACY_INDEX.md  FILTERSPACY_QUICKREF.md  FilteredVerbInflectionExtractor.py  IMPLEMENTATION_SUMMARY.md  LemmaToGroupProbs.py  METADATA_FEATURES.md  MLMGroupAggregator.py  MLMGroupProbabilityAggregator.py  MLMLemmaExtractor.py  MPS_ANALYSIS.md  QUICK_REFERENCE.md  README.md  ROBERTAMaskedLanguageModelVerbs.py  SpaCyVerbCounter.py  SpaCyVerbExtractor.py  SpellChecker.py  TextVerbGroupCounter.py  filterSpaCyVerbs.py  lem_to_group_prob.py  pyproject.toml  randomSampleCSV.py  roberta_mlm_on_verbs.py  run_with_mps.py  tagged_verbs_to_groups.py
