[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roberta-verbs"
version = "0.1.0"
description = "RoBERTa-based verb extraction and semantic analysis pipeline"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Author", email = "author@example.com" },
]
license = { text = "MIT" }

dependencies = [
    "spacy>=3.5.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "lemminflect>=0.2.3",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5.0"]
excel = ["openpyxl>=3.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "roberta-verbs[gui,excel,dev]",
]

[project.scripts]
spacy-verb-extractor = "SpaCyVerbExtractor:main"
roberta-mlm-verbs = "roberta_mlm_on_verbs:main"
filter-verbs = "filterSpaCyVerbs:main"
sample-csv = "randomSampleCSV:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
