[project]
name = "roberta-verbs"
version = "0.1.0"
description = "RoBERTa-based verb extraction and semantic analysis pipeline"
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
    { name = "Author", email = "author@example.com" },
]
license = "MIT"

dependencies = [
    "spacy>=3.7.0,<3.8",
    "thinc>=8.1.0",  # Required for MPSOps (Metal Performance Shaders support)
    "numpy<2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "lemminflect>=0.2.3",
    "openpyxl>=3.1.0",
    "PySide6>=6.5.0",
    "tqdm>=4.66.0",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
transformer-model = [
    "spacy-curated-transformers>=0.2.0,<0.3.0",
    "en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.2/en_core_web_trf-3.7.2-py3-none-any.whl",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "PySide6>=6.5.0",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
